# sentinelaudit

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  start.sh  vercel.json
.github/workflows/: database-migrate.yml  security.yml
.opencode/: summary.md
backend/: .env.example  Dockerfile  alembic.ini  pytest.ini  requirements.txt  start.sh
backend/app/: main.py
docs/: AUDIT_METHODOLOGY.md  CONFIGURATION.md  DATABASE.md  DATABASE_OPERATIONS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FINAL_AUDIT_REPORT.md  FINAL_TEST_REPORT.md  MANUAL_CONFIGURATION_AUDIT.md  METHODOLOGY.md  PRODUCTION_READINESS.md  PUBLIC_SCANNER_SECURITY.md  REPORTING.md  RULE_COVERAGE_AUDIT.md  SCANNER_SECURITY_MODEL.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
reports/templates/: compliance_mapping.md  executive_summary.md  (+3 more)
rules/: sample_rule.yaml
scanner/: pyproject.toml  pytest.ini  setup.py
scanner/sentinelaudit_scanner/: __init__.py  cli.py
scanner/sentinelaudit_scanner/checks/: __init__.py  dns_analyzer.py  dns_checks.py  http_analyzer.py  http_checks.py  javascript_analyzer.py  tech_fingerprint.py  technology_fingerprint.py  tls_analyzer.py  tls_checks.py  version_db.py  vuln_checks.py
scanner/sentinelaudit_scanner/core/: engine.py
scanner/sentinelaudit_scanner/models/: __init__.py  observation.py
tests/: conftest.py
(+176 files in other folders)
